# murmurhash32

./: Cargo.toml
src/: lib.rs  murmurhash2.rs  murmurhash3.rs
