[package]
name = "murmurhash32"
version = "0.2.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
description = """A simple implementation of murmurhash32_2"""
edition = "2018"
keywords = ["murmurhash"]
repository = "https://github.com/tantivy-search/murmurhash32"

[dependencies]
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx", branch = "master" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "murmurhash32_bench"
harness = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
overflow-checks = false
